modules/gdscript/tests/scripts/parser/errors/warning_ignore_extra_start.gd
@warning_ignore_start("unreachable_code")
@warning_ignore_start("unreachable_code")

func test():
	pass
